@@ -1,4 +1,4 @@
-<!-- I THINK I'M DONE WORKING ON THIS FILE! - 4/30 -->
+<!-- I THINK I'M DONE WORKING ON THIS FILE! - 5/6 -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,6 +8,15 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <script type="text/javascript">
+      // <![CDATA[
+        function loading(){
+            $("#loading").show();
+            $("#content").hide();
+        }
+        // ]]>
+    </script>
+
   </head>
   <body>
     <header class="site-header">
