@@ -16,3 +16,10 @@ There are still things that I'm working on, and things I want to add:
  - More tweaks:
     - Add course name to the top of each sheet
     - Add a loading animation to display while the login() function is running (javascript?)
+
+5/6/24
+
+ - I also want to integrate some type of error handling/loading messages.
+
+
+ - THIS VERSION IS READY FOR PROJECT SUBMISSION
